<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/cag_logging">
        <moe.matsuri.nb4a.ui.LongClickListPreference
            app:entries="@array/log_level"
            app:entryValues="@array/log_level"
            app:icon="@drawable/ic_baseline_bug_report_24"
            app:key="log_level"
            app:title="@string/log_level"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:entries="@array/xray_log_level"
            app:entryValues="@array/xray_log_level"
            app:key="xray_log_level"
            app:title="@string/xray_log_level"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_statistics">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_multiline_chart_24"
            app:key="enable_stats"
            app:summary="@string/enable_stats_sum"
            app:title="@string/enable_stats" />
        <SwitchPreference
            app:key="disable_traffic_stats"
            app:summary="@string/disable_traffic_stats_sum"
            app:title="@string/disable_traffic_stats" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_clash_api">
        <SwitchPreference
            app:icon="@drawable/baseline_construction_24"
            app:key="coreClashApiEnabled"
            app:persistent="false"
            app:summary="@string/enable_clash_api_summary"
            app:title="@string/enable_clash_api" />
        <EditTextPreference
            app:key="coreClashApiPort"
            app:persistent="false"
            app:title="@string/listen_port" />
        <EditTextPreference
            app:key="core_box_clash_listen_addr"
            app:title="@string/listen_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="core_box_clash_api_secret"
            app:title="@string/clash_api_secret" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_api_dashboard">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_transform_24"
            app:key="coreApiDashboardEnabled"
            app:persistent="false"
            app:summary="@string/api_dashboard_enable_sum"
            app:title="@string/api_dashboard_enable" />
        <EditTextPreference
            app:key="coreApiDashboardPort"
            app:persistent="false"
            app:title="@string/listen_port" />
        <EditTextPreference
            app:dialogMessage="@string/api_dashboard_secret_hint"
            app:key="core_box_api_secret"
            app:title="@string/clash_api_secret" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_xray">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:entries="@array/xray_vless_preference_entries"
            app:entryValues="@array/int_array_3"
            app:key="xray_vless_preference"
            app:title="@string/xray_vless_preference"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:fragment="io.nekohasekai.sagernet.ui.settings.XrayGeoSettingsFragment"
            app:key="xrayGeoAssets"
            app:summary="@string/xray_geo_assets_sum"
            app:title="@string/xray_geo_assets" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_security">
        <SwitchPreference
            app:icon="@drawable/ic_action_lock_open"
            app:key="skip_cert"
            app:summary="@string/skip_cert_sum"
            app:title="@string/global_allow_insecure" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_security_24"
            app:key="use_mozilla_certs"
            app:title="@string/use_mozilla_certs" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_ntp">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_timelapse_24"
            app:key="enable_ntp"
            app:summary="@string/enable_ntp_sum"
            app:title="@string/enable_ntp" />
        <EditTextPreference
            app:key="ntp_server_address"
            app:title="@string/ntp_server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="ntp_server_port"
            app:title="@string/ntp_server_port" />
        <EditTextPreference
            app:dialogMessage="@string/duration_dialog_message"
            app:key="ntp_interval"
            app:title="@string/ntp_interval" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:entries="@array/ntp_outbound_values"
            app:entryValues="@array/ntp_outbound_values"
            app:key="ntp_outbound"
            app:title="@string/ntp_outbound"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
