<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/cag_interface">
        <moe.matsuri.nb4a.ui.MTUPreference
            app:entries="@array/mtu_select"
            app:entryValues="@array/mtu_select"
            app:icon="@drawable/baseline_public_24"
            app:key="vpn_mtu"
            app:title="@string/mtu" />
        <SwitchPreference
            app:icon="@drawable/ic_image_looks_6"
            app:key="vpn_ipv6"
            app:summary="@string/vpn_ipv6_sum"
            app:title="@string/vpn_ipv6" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="enable_tun_routing"
            app:summary="@string/enable_tun_routing_sum"
            app:title="@string/enable_tun_routing" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_private_range_bypass">
        <SwitchPreference
            app:key="tunBypassPrivateRanges"
            app:persistent="false"
            app:summary="@string/bypass_private_ranges_sum"
            app:title="@string/bypass_private_ranges" />
        <io.nekohasekai.sagernet.ui.settings.StringListPreference
            app:dialogMessage="@string/private_ranges_dialog_message"
            app:key="vpn_private_ranges"
            app:title="@string/private_ranges" />
        <Preference
            app:key="tunRestoreRanges"
            app:title="@string/restore_default_ranges" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/apps">
        <SwitchPreference
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_tun_address">
        <EditTextPreference
            app:key="vpn_tun_ipv4_cidr"
            app:title="@string/tun_ipv4_cidr"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="vpn_tun_ipv6_cidr"
            app:title="@string/tun_ipv6_cidr"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="tunRestoreAddresses"
            app:title="@string/restore_default_addresses" />
    </PreferenceCategory>
</PreferenceScreen>
