<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="name"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        app:title="@string/proxy_cat">
        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="server"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="username"
            app:title="@string/username_opt"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_settings_password"
            app:key="password"
            app:title="@string/password_opt"
            app:dialogLayout="@layout/layout_password_dialog" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="quic"
            app:title="@string/use_quic" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="congestion_control"
            app:title="@string/congestion_control"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_texture_24"
            app:key="extra_headers"
            app:title="@string/extra_headers"
            app:dialogMessage="@string/headers_hint"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_warning_24"
            app:key="insecure_concurrency"
            app:title="@string/naive_insecure_concurrency"
            app:defaultValue="0"
            app:dialogMessage="@string/naive_insecure_concurrency_summary"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="uot"
            app:title="@string/udp_over_tcp" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="tlsCategory"
        app:title="@string/security_settings">
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="tls.server_name"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="tls.certificate"
            app:title="@string/certificates"
            app:dialogMessage="@string/certificate_pem_hint"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:icon="@drawable/ic_baseline_shuffle_24"
            app:key="tls.fragment"
            app:title="@string/tls_fragment"
            app:entries="@array/tri_state_entry"
            app:entryValues="@array/int_array_3"
            app:defaultValue="0"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="tlsEchCategory"
        app:title="@string/ech_settings">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_security_24"
            app:key="tls.ech.enabled"
            app:title="@string/enable_ech" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_nfc_24"
            app:key="tls.ech.config"
            app:title="@string/ech_config"
            app:dialogMessage="@string/one_per_line"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_domain_24"
            app:key="tls.ech.queryTarget"
            app:title="@string/ech_query_server_name"
            app:dialogMessage="@string/ech_query_target_hint"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
